kubernetes/manifests/bsk-lead/_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: bsk
    name: bsk
  name: bsk
