kubernetes/manifests/bsk-lead/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: bsk
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80 # The port the service exposes
    targetPort: 80 # The port the container exposes
  type: ClusterIP # Or LoadBalancer if you're on a cloud provider
---
