kubernetes/manifests/bsk-lead/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nullservers-ingress
  namespace: bsk-lead
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Replace with your ClusterIssuer name
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nullservers.com
      secretName: nullservers-tls 
  rules:
    - host: nullservers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service 
                port:
                  number: 80
