kubernetes/manifests/bsk-lead/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-from-tunnel
  namespace: bsk
spec:
  endpointSelector:
    matchLabels:
      app: nginx
  ingress:
    - fromEndpoints:
        - matchLabels:
            name: tunnel # Replace with the actual labels of your tunnel namespace.
            io.kubernetes.pod.namespace: tunnel # This is crucial to select pods in the tunnel namespace.F
        - matchLabels:
            io.kubernetes.pod.namespace: ingress-nginx # This is crucial to select pods in the tunnel namespace.F
